# kr-game

./: .gitignore  .replit  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  MESSAGING_FEATURE.md  Procfile  RAILWAY_DEPLOYMENT_SUMMARY.md  README.md  README_DEPLOYMENT.md  VERCEL_DEPLOYMENT.md  admin_only.py  admin_panel.py  bot.py  config.py  database.py  keyboards.py  models.py  pyproject.toml  railway.json  replit.md  requirements.txt  run.py  startup.py  startup_simple.py  startup_vercel.py  test_deployment.py  utils.py  utils_captcha.py  utils_subscription.py  vercel.json
api/: index.py  simple.py  status.py  vercel.py
handlers/: admin.py  contest.py  game.py  payments.py  referral.py  start.py  support.py  withdrawals.py
static/: style.css
templates/: admin.html
